# Asterion

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  STABLE_STATUS.md  docker-compose.yml
backend/: .env.example  Dockerfile  apply_0009.py  pyproject.toml
backend/app/: main.py
backend/app/analysis/: agents.py  company_context.py  schemas.py
backend/app/backtesting/: dataset.py  evaluation.py  forward_returns.py  schemas.py  signals.py
backend/app/core/: config.py  provenance.py
backend/app/db/: repo.py  session.py
backend/app/decision/: policy_engine.py  schemas.py
backend/app/decision_intelligence/: __init__.py  merger.py  report.py  risk_taxonomy.py  schemas.py  service.py
backend/app/ingestion/: prices.py  sec_edgar.py
backend/app/integrations/: __init__.py
backend/app/ipo/: __init__.py  filing_parser.py  ipo_valuation.py  report.py  risk_analysis.py  schemas.py  service.py
backend/app/llm/: audit.py  hallucination_audit.py  json_repair.py  ollama_provider.py  provider_base.py  schema_validation.py
backend/app/market/: beta_provider.py  cache.py  finnhub_provider.py  fred_provider.py  provider_base.py  provider_state.py  router.py  stream.py  yfinance_provider.py
backend/app/portfolio/: __init__.py  policy_rules.py  report_builder.py  risk_metrics.py  schemas.py
backend/app/quant/: forensic.py  fundamentals.py  reverse_dcf.py  scoring_inputs.py  valuation.py  valuation_multiples.py
backend/app/rag/: __init__.py  chunking.py  citations.py  document_parser.py  embeddings.py  evidence_pack.py  hybrid_search.py  (+1 more)
backend/tests/: test_foundation.py  test_migrations.py
(+249 files in other folders)
