[project]
name = "asterion"
version = "0.1.0"
description = "Asterion — local-first institutional-grade equity intelligence & portfolio decision engine"
requires-python = ">=3.11"
dependencies = [
  # API
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  # DB
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "alembic>=1.13",            # optional; raw SQL migrations are primary
  # Queue
  "celery>=5.4",
  "redis>=5.0",
  # Quant ecosystem (report hard dependency)
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.13",             # scipy.optimize: Kelly, Black-Litterman
  "statsmodels>=0.14",       # macro regressions
  "scikit-learn>=1.5",
  "hmmlearn>=0.3",           # market regime (experimental)
  # Ingestion / http
  "httpx>=0.27",
  "tenacity>=8.3",           # exponential backoff (SEC rate limits)
  "lxml>=5.2",
  "beautifulsoup4>=4.12",
  # LLM / RAG
  "ollama>=0.3",
  "openai>=1.40",            # used only for OpenAI-compatible local servers
  # Price Data
  "yfinance>=0.2.40",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "hypothesis>=6.100",       # property tests for formulas
]
ml = [
  "xgboost>=2.0",
  "lightgbm>=4.3",
  "shap>=0.45",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
